# Object_Clustering_Using_NAO_Robot

./: .gitignore  README.md
naoClustering/: CMakeLists.txt  ImageFetcherOnOSX.h  ObjectDetector.cpp  main.cpp  qiproject.xml
